--- a/labs/javaScript/in-class-click-events/index.html
+++ b/labs/javaScript/in-class-click-events/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
   <div>
-    <button>Button 1</button>
-    <button>Button 2</button>
-    <button>Button 3</button>
+    <button class =  "ButtonOne"/button>
+    <button class = "ButtonTwo"/button>
+    <button class = "ButtonThree"/button>
+      <div id="information">
+        <p>wfn  eoif</p>
   </div>
   
   <script src="script.js"></script>
