working js code

--- a/labs/javaScript/in-class-click-events/index.html
+++ b/labs/javaScript/in-class-click-events/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Add Event Listener</title>
 
 </head>
 <body>
   <div>
-    <button class =  "ButtonOne"/button>
+    <button class = "ButtonOne"/button>
     <button class = "ButtonTwo"/button>
     <button class = "ButtonThree"/button>
-      <div id="information">
-        <p>wfn  eoif</p>
+      
+        
   </div>
-  
+  <div id="information">
   <script src="script.js"></script>
 </body>
 </html>
