--- a/homework/javaScript/counter-factory/index.html
+++ b/homework/javaScript/counter-factory/index.html
@@ -19,8 +19,9 @@ See LICENSE for details.
     </div>
     <main class='component'>
       <h2> Counters: </h2>
-      <div id='counter-list'>
+          </div>
       </div>
     </main>
   </body>
 </html>
+</div>
